-Added Accessibility->GUI settings as a quick way to enable some GUI enhancements: high contrast style, hotkeys, etc
-Show in file selector when a file can be expanded
-Improved screen file previews: any file size of 6912 bytes is guessed as Spectrum screen
-Maximizing windows now take care of size of ZX Desktop, when setting "Open menu on ZX Desktop" is enabled
-Added item to reduce+rearrange windows
-Added some graphical meters on AY Registers, Core Statistics
-Colour palette window now shows all colours that fit in the window
-View sprite legend now adapts to size
-Added setting to disable boxes around lower and upper ZX Desktop Buttons
-Added support for accentuated characters

Improved Next emulation:
-Turbo setting: make it by default limited on NextZXOS
-ZSF snapshots include all info from port 123b (previous TBBlue .zsf snapshots are incompatible with this version, sorry!)
-Added a splash message when changing Layer 2 modes

Improved Text Aventure Features: 
-Improved detection of Daad aventures on debugging
-Now you can render any image from a Speccy Text Adventure (supported parsers: Quill, Paws, Daad, Gac)
-Now you can use a text speech script which can translate text from the game and show the translated text on ZEsarUX window

Improved Find menu: now can find several bytes and open Hexadecimal Editor on the results list
Improved Audio to .mid exporter: allow changing instrument
Improved configuration file: increased maximum allowed size to 256kb and 2000 parameters


Fixed file previews on corrupted files: pzx, tap
Fixed rearranging windows and using total window height
Fixed Next ULA Scroll to use registers 0x26 and 0x27
Fixed Next tbblue port 123b behaviour: 48kb ram paging, shadow display, 3bit offset, read access
Fixed cpu-step behaviour the first time it's executed
Fixed cursor keys up/down on Jupiter Ace
Fixed --help and --experthelp settings: do not parse configuration file when showing help
Fixed autoload on spectrum 48k+ spanish