@@ -10204,6 +10204,19 @@ int zxvision_coords_in_front_window(zxvision_window *w,int x,int y)
 }
 */
 
+int zxvision_coords_in_front_window(int x,int y)
+{
+
+	if (!menu_allow_background_windows) return 0;
+
+	if (zxvision_current_window==NULL) return 0;
+
+	return zxvision_coords_in_window(zxvision_current_window,x,y);
+
+
+}
+
+
 void zxvision_draw_window_contents(zxvision_window *w)
 {
 
@@ -12006,6 +12019,8 @@ void zxvision_handle_mouse_events(zxvision_window *w)
 				debug_printf (VERBOSE_DEBUG,"Clicked on window: %s",ventana_pulsada->window_title);
 
 				zxvision_handle_mouse_ev_switch_back_wind(ventana_pulsada);
+
+                //printf("despues de conmutar ventana\n");
 			
 			}
 
@@ -35227,6 +35242,9 @@ void menu_inicio_handle_button_presses(void)
 
 }
 
+//Si se pulsa en alguna ventana con el menu cerrado
+int pulsado_alguna_ventana_con_menu_cerrado=0;
+
 
 void menu_inicio_bucle_main(void)
 {
@@ -35255,8 +35273,9 @@ void menu_inicio_bucle_main(void)
 
 	do {
 
-
-		if (menu_pressed_zxdesktop_button_which>=0 || menu_pressed_zxdesktop_lower_icon_which>=0) {
+        printf("antes del if\n");
+		if (menu_pressed_zxdesktop_button_which>=0 || menu_pressed_zxdesktop_lower_icon_which>=0 || pulsado_alguna_ventana_con_menu_cerrado) {
+            printf("se cumple if\n");
 			cls_menu_overlay();
 		//Si se habia pulsado boton de zx desktop y boton no es el 0
 		//con boton 0 lo que hacemos es abrir el menu solamente			
@@ -35273,9 +35292,16 @@ void menu_inicio_bucle_main(void)
 				menu_inicio_handle_lower_icon_presses();
 			}
 			//printf ("despues menu_inicio_handle_button_presses\n");
+
+            else if (pulsado_alguna_ventana_con_menu_cerrado) {
+                printf("menu_inicio_bucle_main. pulsado en alguna ventana con menu cerrado\n");
+                pulsado_alguna_ventana_con_menu_cerrado=0;
+                salir_menu=1;
+            }
 		}
 
 		else {		
+            printf("else if\n");
 
 		if (strcmp(scr_new_driver_name,"xwindows")==0 || strcmp(scr_new_driver_name,"sdl")==0 || strcmp(scr_new_driver_name,"caca")==0 || strcmp(scr_new_driver_name,"fbdev")==0 || strcmp(scr_new_driver_name,"cocoa")==0 || strcmp(scr_new_driver_name,"curses")==0) f_functions=1;
 		else f_functions=0;
@@ -35438,6 +35464,8 @@ void menu_inicio_bucle(void)
 
 	}
 
+    printf("salir todos menus en menu_inicio_bucle: %d\n",salir_todos_menus);
+
     //A partir de aqui ya se debe mostrar boton de cerrar todos menus
     menu_mostrar_boton_close_all_menus.v=1;
 
@@ -35453,7 +35481,9 @@ void menu_inicio_bucle(void)
 			//printf ("Reabrimos menu para boton pulsado %d lower icon %d\n",menu_pressed_zxdesktop_button_which,menu_pressed_zxdesktop_lower_icon_which);
 		}
 
+        printf("antes menu_inicio_bucle_main\n");
 		menu_inicio_bucle_main();
+        printf("despues menu_inicio_bucle_main\n");
 
 		//Se reabre el menu tambien si pulsada tecla F5 en cualquiera de los menus
 		if (menu_pressed_open_menu_while_in_menu.v) {
@@ -35858,9 +35888,45 @@ void menu_inicio(void)
 {
 
 	//printf ("inicio menu_inicio\n");
+    pulsado_alguna_ventana_con_menu_cerrado=0;
 
 	//Comprobar si se ha pulsado un boton para colorearlo
 	if (mouse_left) {
+        //Si pulsado en alguna ventana
+        if (menu_allow_background_windows && menu_multitarea && always_force_overlay_visible_when_menu_closed) {
+            int absolute_mouse_x,absolute_mouse_y;
+			
+			menu_calculate_mouse_xy_absolute_interface(&absolute_mouse_x,&absolute_mouse_y);
+
+			//Vamos a ver en que ventana se ha pulsado, si tenemos background activado
+			zxvision_window *ventana_pulsada;
+
+			ventana_pulsada=zxvision_coords_in_below_windows(zxvision_current_window,absolute_mouse_x,absolute_mouse_y);			
+
+
+			if (ventana_pulsada!=NULL) {
+				printf("abierto menu y pulsado en ventana en background: %s\n",ventana_pulsada->window_title);
+
+				zxvision_handle_mouse_ev_switch_back_wind(ventana_pulsada);
+
+                //printf("despues de conmutar ventana\n");
+                pulsado_alguna_ventana_con_menu_cerrado=1;
+			
+			}
+
+            //O si pulsamos en la ventana que esta arriba
+			if (zxvision_coords_in_front_window(absolute_mouse_x,absolute_mouse_y)) {
+				printf("abierto menu y pulsado en ventana en foreground: %s\n",zxvision_current_window->window_title);
+
+				zxvision_handle_mouse_ev_switch_back_wind(zxvision_current_window);
+
+                //printf("despues de conmutar ventana\n");
+                pulsado_alguna_ventana_con_menu_cerrado=1;
+			
+			}            
+
+        }
+
 		if (zxvision_if_mouse_in_zlogo_or_buttons_desktop() ) {
 			//printf("Pulsado en un boton desde menu_inicio. menu_abierto: %d\n",menu_abierto);
 
@@ -36012,9 +36078,11 @@ void menu_inicio(void)
 	redraw_footer();
 
 	//Establecemos variable de salida de todos menus a 0
+
+    //no alterar variable de salir si hemos pulsado en alguna ventana, para que cierre el menu y vaya a esa ventana
 	salir_todos_menus=0;
 
-	//printf ("inicio menu_inicio2\n");
+	printf ("inicio menu_inicio2 salir todos menus: %d\n",salir_todos_menus);
 
 
 	//Si first aid al inicio
